# pit

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  OWNERS  README.md  SECURITY.md  go.work  go.work.sum  justfile  pipeline.just  pyproject.toml  requirements.txt
bindings/js/: .gitignore  .npmignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
bindings/js/scripts/: build-wasm.mjs  copy-node-wasm.mjs  finalize-module-format.mjs  inline-wasm.mjs  make-package-json.mjs  normalize-typedoc-assets.mjs  sync-version.mjs
bindings/js/src/: account_adjustment.rs  configure.rs  context.rs  decimal.rs  domain.rs  engine.rs  error.rs  execution_report.rs  lib.rs  lock.rs  marketdata.rs  order.rs  outcome.rs  reference_book.rs  reject.rs  result.rs
bindings/js/src-ts/: errors.ts  index.ts  mutation.ts  node-cjs-shared.ts  runtime.browser.ts  runtime.node.ts  types.ts
bindings/js/src-ts/accountadjustment/: index.ts
bindings/js/src-ts/accounts/: index.ts
bindings/js/src-ts/core/: index.ts
bindings/js/src-ts/marketdata/: index.ts
bindings/js/src-ts/model/: index.ts
bindings/js/src-ts/param/: index.ts
bindings/js/src-ts/pretrade/: index.ts
bindings/js/src-ts/reject/: index.ts
bindings/js/src-ts/tx/: index.ts
bindings/js/src-ts/wasm-snippets/: errors_snippet.js
bindings/js/src/param/: enums.rs  ids.rs  leverage.rs  mod.rs  monetary_amount.rs  value_types.rs
bindings/js/src/policy/: mod.rs  order_size_limit.rs  order_validation.rs  pnl_killswitch.rs  rate_limit.rs  spot_funds.rs
bindings/js/tests/: clone.test.ts  configure.test.ts  configure.types.ts  dry_run.test.ts  engine.test.ts  errors.test.ts  examples.readme.test.ts  examples_market_data.test.ts  examples_wiki.test.ts  execution_report.test.ts  ids.test.ts  input_nullability.test.ts  input_nullability.types.ts  inputs.test.ts  integer_boundaries.test.ts  lock.test.ts  marketdata_errors.test.ts  normalize-typedoc-assets.test.ts  ownership.test.ts  package.smoke.test.ts  params.test.ts  params.types.ts  policy.test.ts  policy.types.ts  policy_validation.test.ts  reference_book.test.ts  reject.types.ts
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/docs/: concepts.md  conf.py  index.md  installation.md  quickstart.md
bindings/python/docs/api/: index.md
bindings/python/docs/examples/: index.md
bindings/python/docs/guides/: account-adjustments.md  domain-types.md  engine.md  errors.md  policies.md  threading.md
bindings/python/python/openpit/: .gitignore  __init__.py  _enum.py  _openpit.pyi  account_adjustment.py  account_adjustment.pyi  core.py  core.pyi  marketdata.py  param.py
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py
bindings/python/tests/integration/: test_account_adjustment_integration.py  test_engine_integration.py  test_examples_market_data.py  test_examples_readme.py  test_examples_wiki.py  test_market_data_integration.py
bindings/python/tests/unit/: test_account_adjustment.py  test_account_adjustment_batch.py  test_configurator.py  test_custom_order_models.py  test_engine.py  test_engine_shortcuts.py  test_entity_paths.py  test_execution_report.py  test_leverage.py  test_missing_required_fields.py  test_order.py  test_param.py  test_policy_api.py  test_policy_interleaving.py  test_reference_book.py  test_request_reservation.py  test_results_rejects.py  test_start_policies.py
crates/openpit/: Cargo.toml  README.md
crates/openpit-derive/: Cargo.toml  README.md
crates/openpit-derive/src/: lib.rs
crates/openpit-derive/tests/: trybuild.rs
crates/openpit-ffi/: Cargo.toml  build.rs
crates/openpit-ffi/src/: account_adjustment.rs  account_control.rs  account_group_id.rs  account_outcome.rs  bytes.rs  engine.rs  execution_report.rs  group_id.rs  lib.rs  marketdata.rs  order.rs  param.rs  policy.rs  pre_trade_lock.rs  reference_book.rs  reject.rs
crates/openpit-ffi/src/policy/: custom.rs  mod.rs  order_size_limit.rs  order_validation.rs  pnl_bounds_killswitch.rs  rate_limit.rs  spot_funds.rs
crates/openpit/src/: lib.rs  time.rs
crates/openpit/src/core/: account_adjustment.rs  account_adjustment_context.rs  account_adjustment_policy.rs  account_control.rs  account_groups.rs  account_key.rs  account_outcome.rs  accounts.rs  blocked_accounts.rs  configure.rs  engine.rs  engine_builder.rs  engine_trait.rs  execution_report.rs  instrument_id.rs  macros.rs  mod.rs  mutation.rs  order.rs  reference_book.rs  request_trait.rs  sync_mode.rs
crates/openpit/src/marketdata/: builder.rs  error.rs  instrument_id.rs  internals.rs  lock.rs  mod.rs  quote.rs  resolution.rs  service.rs  ttl.rs
crates/openpit/src/param/: account_group_id.rs  account_id.rs  adjustment_amount.rs  asset.rs  cash_flow.rs  fee.rs  fill_type.rs  leverage.rs  mod.rs  monetary_amount.rs  notional.rs  pnl.rs  position_effect.rs  position_mode.rs  position_side.rs  position_size.rs  price.rs  quantity.rs  side.rs  trade.rs  trade_amount.rs  volume.rs
crates/openpit/src/pretrade/: account_adjustment_policy.rs  check_pre_trade_start_policy.rs  configurable.rs  context.rs  handle.rs  handles.rs  lock.rs  mod.rs  mutation.rs  mutations.rs  policy.rs  policy_result.rs  post_trade_context.rs  post_trade_result.rs  reject.rs  request.rs  reservation.rs  start_pre_trade_time.rs
crates/openpit/tests/: account_adjustment_integration.rs  account_sync_compile_check_works.rs  configure_integration.rs  derive_feature_e2e.rs  examples_market_data.rs  examples_readme.rs  examples_wiki.rs  marketdata.rs  multithread_full_sync.rs  multithread_full_sync_engine.rs  multithread_full_sync_per_account_counter.rs  multithread_full_sync_pnl_killswitch.rs  pretrade_scenario.rs  spot_funds.rs
crates/pit-ffi/: Cargo.toml
crates/pit-ffi/src/: account_adjustment.rs  engine.rs  execution_report.rs  instrument.rs  last_error.rs  lib.rs  order.rs  param.rs  policy.rs  reject.rs  string.rs
(+1168 files in other folders)
