[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "openpit"
description = "Embeddable pre-trade risk SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Eugene V. Palchukovsky", email = "maintainers@palchukovsky.com" },
]
keywords = [
    "pre-trade",
    "risk-management",
    "trading",
    "fintech",
    "algorithmic-trading",
    "risk-engine",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://openpit.dev/"
Documentation = "https://openpit.readthedocs.io/"
Repository = "https://github.com/openpitkit/pit"
Issues = "https://github.com/openpitkit/pit/issues"
Changelog = "https://github.com/openpitkit/pit/releases"

[tool.maturin]
bindings = "pyo3"
features = ["extension-module"]
module-name = "openpit._openpit"
python-source = "python"
include = ["LICENSE", "OWNERS"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra"
markers = [
    "unit: fast API-level Python binding tests",
    "integration: end-to-end engine integration tests from Python",
]

[tool.ruff.format]

[tool.ruff]
target-version = "py310" # Python 3.10

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["D102", "D103"]

[tool.black]
target-version = ["py313"] # Python 3.13
