[package]
name = "openpit-ffi"
version = "0.4.0"
edition = "2021"
publish = false
license = "Apache-2.0"
repository = "https://github.com/openpitkit/pit"
description = "OpenPit FFI bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
openpit = { version = "0.4.0", path = "../openpit", features = ["serde"] }
openpit-interop = { version = "0.4.0", path = "../openpit-interop" }
rust_decimal = "1"
serde_json = "1"
rmp-serde = "1"
ciborium = "0.2"
