[package]
name = "openpit"
version = "0.6.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/openpitkit/pit"
description = "Embeddable pre-trade risk SDK"
readme = "README.md"
keywords = ["pre-trade", "risk-management", "trading", "algotrading", "fintech"]
categories = ["finance"]

[features]
default = []
derive = ["dep:openpit-derive"]
serde = ["dep:serde", "rust_decimal/serde", "smol_str/serde"]
# Swap std::time::Instant for web_time::Instant on wasm32, where the std
# clock backend panics. No effect on native targets.
wasm-clock = ["dep:web-time"]

[dependencies]
arc-swap = "1"
openpit-derive = { path = "../openpit-derive", version = "=0.6.0", optional = true }
parking_lot = "0.12"
rust_decimal = "1.41"
serde = { version = "1", features = ["derive"], optional = true }
smallvec = "1"
smol_str = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"

[package.metadata.release]
pre-release-replacements = [
  { file = "../../bindings/go/internal/loader/loader.go", search = 'const SDKVersion = "[0-9]+\.[0-9]+\.[0-9]+"', replace = "const SDKVersion = \"{{version}}\"", exactly = 1 },
  { file = "../../examples/go/rate_pnl_killswitch/go.mod", search = 'go\.openpit\.dev/openpit v[0-9]+\.[0-9]+\.[0-9]+', replace = "go.openpit.dev/openpit v{{version}}", exactly = 1 },
  { file = "../../examples/go/spot_funds/go.mod", search = 'go\.openpit\.dev/openpit v[0-9]+\.[0-9]+\.[0-9]+', replace = "go.openpit.dev/openpit v{{version}}", exactly = 1 },
  { file = "../../examples/go/spot_loadtest/go.mod", search = 'go\.openpit\.dev/openpit v[0-9]+\.[0-9]+\.[0-9]+', replace = "go.openpit.dev/openpit v{{version}}", exactly = 1 },
  { file = "../../examples/go/spot_table/go.mod", search = 'go\.openpit\.dev/openpit v[0-9]+\.[0-9]+\.[0-9]+', replace = "go.openpit.dev/openpit v{{version}}", exactly = 1 },
  { file = "../../examples/python/rate_pnl_killswitch/requirements.txt", search = 'openpit>=[0-9]+\.[0-9]+\.[0-9]+', replace = "openpit>={{version}}", exactly = 1 },
  { file = "../../examples/python/spot_funds/requirements.txt", search = 'openpit>=[0-9]+\.[0-9]+\.[0-9]+', replace = "openpit>={{version}}", exactly = 1 },
  { file = "../../examples/python/spot_table/requirements.txt", search = 'openpit>=[0-9]+\.[0-9]+\.[0-9]+', replace = "openpit>={{version}}", exactly = 1 },
]
