[package]
name = "pit-ffi"
version = "0.2.2"
edition = "2021"
publish = false
license = "Apache-2.0"
repository = "https://github.com/openpitkit/pit"
description = "Pit FFI bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
openpit = { version = "0.2.2", path = "../openpit" }
pit-interop = { version = "0.2.2", path = "../pit-interop" }
rust_decimal = "1"
